--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "hbs": "~4.0.1",
+    "jsonwebtoken": "^8.1.0",
     "morgan": "~1.8.1",
     "node-sass-middleware": "0.9.8",
+    "pg": "^7.4.0",
     "serve-favicon": "~2.4.2"
   }
 }
