--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^1.0.3",
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.1.0",
     "morgan": "~1.8.1",
     "node-sass-middleware": "0.9.8",
+    "nodemon": "^1.12.1",
     "pg": "^7.4.0",
     "serve-favicon": "~2.4.2"
   }
