--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "firebase-admin": "^5.5.0",
     "hbs": "~4.0.1",
     "jsonwebtoken": "^8.1.0",
     "morgan": "~1.8.1",
