--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "engines": {
+    "node": "8.0.0"
+  },
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "~1.17.1",
