--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase-admin": "^5.5.0",
     "hbs": "~4.0.1",
     "jsonwebtoken": "^8.1.0",
+    "microgear": "^0.8.1",
     "morgan": "~1.8.1",
     "node-sass-middleware": "0.9.8",
     "serve-favicon": "~2.4.2"
