--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "firebase": "^4.6.2",
     "firebase-admin": "^5.5.0",
     "hbs": "~4.0.1",
     "jsonwebtoken": "^8.1.0",
