--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "start": "node ./bin/www"
   },
   "engines": {
     "node": "8.0.0"
@@ -22,7 +21,6 @@
     "microgear": "^0.8.1",
     "morgan": "~1.8.1",
     "node-sass-middleware": "0.9.8",
-    "nodemon": "^1.12.1",
     "serve-favicon": "~2.4.2"
   }
 }
